# affiliate_supression_temp

./: 43.0.0  README.md  convert_pip_to_conda.py  mwe_requirements.txt  pyproject.toml  tox.ini
.github/workflows/: build_dataset.yml  continuous_integration.yml  deploy_aks_service.yml  deploy_batch_endpoint.yml  train_model.yml
.github/workflows/scripts/: databricks_setup.sh  databricks_trigger_job.sh  deploy_aks_endpoint.sh  deploy_batch_endpoint.sh  setup_az_cli.sh
databricks/: README.md
databricks/notebook_jobs/: README.md  build_dataset.ipynb  train_and_register_model.ipynb
deployment_config/: README.md
deployment_config/batch_endpoint/: batch_endpoint.yml  compute_target.yml  deployment_batch_endpoint.yml
deployment_config/databricks/: databricks_dataset_job.json  databricks_train_job.json
deployment_config/online_endpoint/: conda_env.yml  deployment_aks.yml  online_endpoint.yml
development/: README.md
development/affiliate_supression_V2/Colin/: EDA.ipynb  credit_score_card.ipynb  dataset_creation_dbfile.ipynb  prime_predictions.ipynb
requirements/: build.txt  deploy.txt  local.txt  test.txt
src/datascience_service/: __init__.py  config.yaml  environment.yml  error_handling.py  score.py  score_batch_endpoint.py  utils.py
src/datascience_service/models/: TemplateModel1.py
src/datascience_service/models/tests/: README.md  test_model_1.py
src/datascience_service/tests/: README.md
src/tests/: README.md  test_score.py
src/tests/test_data/: __init__.py  example_payload.json
